# maya-firmware

./: CMakeLists.txt  README.md  prj.conf
boards/: esp32_devkitc.overlay
src/: main.c
